# asterisk-sms-bot-rs

./: Cargo.toml  LICENSE  README.md  config.example.toml
src/: main.rs
