[package]
name = "sms-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", default-features = false, features = [
  "rustls",
  "ctrlc_handler",
] }
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
